# rcpr

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  config.h.cmake  model_checking.md
cmake/: cpp.cmake  fibers.cmake  psock.cmake
contrib/: README.md
examples/: CMakeLists.txt
examples/echo_server/: CMakeLists.txt
examples/http_server/: CMakeLists.txt
examples/mandelbrot/: CMakeLists.txt
extraction/: README.md
extraction/contrib/: README.md
include/rcpr/: allocator.h  auto_reset_trigger.h  bigint.h  byteswap.h  compare.h  component.h  condition.h  control.h  fiber.h  fiber_fwd.h  function_contracts.h  function_decl.h  list.h  macro_tricks.h  message.h  model_assert.h  psock.h  queue.h  rbtree.h  resource.h  slist.h  socket_utilities.h  stack.h  status.h  string.h  thread.h  uuid.h  vtable.h
models/: CMakeLists.txt  Makefile  bigint_clone.mk  bigint_clone_main.c  bigint_create_zero.mk  bigint_create_zero_main.c  fiber_create.mk  fiber_create_for_thread.mk  fiber_create_for_thread_main.c  fiber_create_main.c  fiber_entry.mk  fiber_entry_main.c  fiber_scheduler_add.mk  fiber_scheduler_add_main.c  fiber_scheduler_create.mk  fiber_scheduler_create_main.c  fiber_scheduler_run.mk  fiber_scheduler_run_main.c  fiber_scheduler_yield.mk  fiber_scheduler_yield_main.c  list_append.mk  list_append_main.c  list_append_tail.mk  list_append_tail_main.c  list_count.mk  list_count_main.c  list_create.mk  list_create_main.c  list_insert.mk  list_insert_head.mk  list_insert_head_main.c  list_insert_main.c  list_node_child_swap.mk  list_node_child_swap_main.c  list_pop.mk  list_pop_main.c  malloc_allocator.mk  malloc_allocator_create.mk  malloc_allocator_create_main.c  malloc_allocator_main.c  (+136 more)
models/allocator/: CMakeLists.txt
models/allocator/allocator_reallocate/: CMakeLists.txt  main.c
models/allocator/malloc_allocator_create/: CMakeLists.txt  main.c
models/list/: CMakeLists.txt
models/list/list_create_release/: CMakeLists.txt  main.c
models/resource/: CMakeLists.txt
models/resource/resource_init_release/: CMakeLists.txt  main.c
models/shadow/: valid_range.c
models/string/: CMakeLists.txt
models/string/chomp/: CMakeLists.txt  main.c
models/string/chomp_shadow/: CMakeLists.txt
models/string/ends_with/: CMakeLists.txt
models/string/ends_with_shadow/: CMakeLists.txt  main.c
models/string/left_trim/: CMakeLists.txt
models/string/left_trim_shadow/: CMakeLists.txt  main.c
models/string/multisplit/: CMakeLists.txt
models/string/multisplit_shadow/: CMakeLists.txt  main.c
models/string/right_trim/: CMakeLists.txt
models/string/right_trim_shadow/: CMakeLists.txt  main.c
models/string/split/: CMakeLists.txt  main.c
models/string/split_shadow/: CMakeLists.txt
models/string/starts_with/: CMakeLists.txt  main.c
models/string/starts_with_shadow/: CMakeLists.txt  main.c
models/string/strdup/: CMakeLists.txt  main.c
models/string/strdup_shadow/: CMakeLists.txt
models/string/trim/: CMakeLists.txt  main.c
models/string/trim_shadow/: CMakeLists.txt
models/string/words/: CMakeLists.txt  main.c
models/string/words_shadow/: CMakeLists.txt
old_models/: bigint_clone.mk  bigint_create_zero.mk  fiber_create_main.c  fiber_entry.mk  fiber_entry_main.c  fiber_scheduler_add.mk  fiber_scheduler_create.mk  fiber_scheduler_create_main.c  fiber_scheduler_run.mk  fiber_scheduler_run_main.c  fiber_scheduler_yield.mk  fiber_scheduler_yield_main.c  list_append_main.c  list_append_tail.mk  list_append_tail_main.c  list_count.mk  list_count_main.c  list_create.mk  list_create_main.c  list_insert.mk  list_insert_head_main.c  list_insert_main.c  list_node_child_swap.mk  list_pop_main.c  malloc_allocator.mk  malloc_allocator_create.mk  malloc_allocator_main.c  psock_read_boxed_bool_main.c  psock_read_boxed_data.mk  psock_read_boxed_data_main.c  psock_read_boxed_int16.mk  psock_read_boxed_int64.mk  psock_read_boxed_string.mk  psock_read_boxed_uint16_main.c  psock_read_boxed_uint64.mk  psock_read_boxed_uint8_main.c  psock_read_raw_bool.mk  psock_read_raw_int16_main.c  psock_read_raw_int32.mk  psock_read_raw_int32_main.c  (+70 more)
reports/: rcpr_model_check_todo.xml  todo_report.xsl
scripts/: compiler-chooser.sh  linker-chooser.sh
src/allocator/: allocator_allocate.c  allocator_control.c  allocator_internal.h  allocator_reallocate.c  allocator_reclaim.c  allocator_resource_handle.c  bump_allocator_create.c  malloc_allocator_create.c
src/auto_reset_trigger/: auto_reset_trigger_create.c  auto_reset_trigger_internal.h  auto_reset_trigger_register.c  auto_reset_trigger_resource_handle.c  auto_reset_trigger_signal.c  auto_reset_trigger_step.c
src/bigint/: bigint_clone.c  bigint_create_zero.c  bigint_internal.h  bigint_release.c  bigint_resource_handle.c
src/condition/: condition_barrier_create.c  condition_discipline_close_callback_handler.c  condition_discipline_context_create.c  condition_discipline_definitions.c  condition_discipline_get_or_create.c  condition_discipline_notify_all_callback_handler.c  condition_discipline_notify_one_callback_handler.c  condition_discipline_set_resource_release.c  condition_discipline_wait_callback_handler.c  condition_internal.h  conditional_close.c  conditional_create.c  conditional_notifiy_one.c  conditional_notify_all.c  conditional_wait.c
src/list/: list_append.c  list_append_tail.c  list_clear.c  list_count.c  list_create.c  list_head.c  list_insert.c  list_insert_head.c  list_internal.h  (+12 more)
test/: test_psock_read_write_boxed_int16.cpp  test_psock_read_write_boxed_int64.cpp  test_psock_read_write_boxed_int8.cpp  test_psock_read_write_boxed_string.cpp  test_psock_read_write_boxed_uint32.cpp  test_psock_read_write_raw_bool.cpp  test_psock_read_write_raw_int8.cpp  test_psock_read_write_raw_uint16.cpp  test_psock_read_write_raw_uint32.cpp  test_psock_read_write_raw_uint8.cpp  test_queue_pop.cpp  test_slist_append.cpp  test_slist_append_tail.cpp  test_slist_create.cpp  test_slist_insert_head.cpp  test_slist_node_child_swap.cpp  test_slist_node_next_pop.cpp  test_slist_pop.cpp  test_socket_utility_hton32.cpp
theorems/: CMakeLists.txt
(+635 files in other folders)
