ADD_SUBDIRECTORY(chomp)
ADD_SUBDIRECTORY(chomp_shadow)
ADD_SUBDIRECTORY(ends_with)
ADD_SUBDIRECTORY(ends_with_shadow)
ADD_SUBDIRECTORY(left_trim)
ADD_SUBDIRECTORY(left_trim_shadow)
ADD_SUBDIRECTORY(multisplit)
ADD_SUBDIRECTORY(multisplit_shadow)
ADD_SUBDIRECTORY(right_trim)
ADD_SUBDIRECTORY(right_trim_shadow)
ADD_SUBDIRECTORY(split)
ADD_SUBDIRECTORY(split_shadow)
ADD_SUBDIRECTORY(starts_with)
ADD_SUBDIRECTORY(starts_with_shadow)
ADD_SUBDIRECTORY(trim)
ADD_SUBDIRECTORY(trim_shadow)
ADD_SUBDIRECTORY(words)
ADD_SUBDIRECTORY(words_shadow)
